# fulcrum

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
contract/: .env.example  README.md  foundry.toml
contract/script/: Deploy.s.sol
contract/src/: TradeExecutor.sol
contract/test/: V3PoolViewer.t.sol
contracts/: .gitignore  foundry.toml
contracts/test/: TradeExecutor.t.sol
crates/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: constant.rs  engine.rs  logger.rs  order.rs  price.rs  price_graph.rs  trade_router.rs  trade_simulator.rs  types.rs  uniswap_v2.rs  uniswap_v3.rs  zero_ex.rs
crates/ethabi-static-derive-vendored/: Cargo.toml
crates/ethabi-static-derive-vendored/src/: lib.rs
crates/ethabi-static-vendored/: Cargo.toml
crates/ethabi-static-vendored/src/: lib.rs  types.rs
crates/sequencer-feed/: Cargo.toml
crates/sequencer-feed/src/: deser.rs  lib.rs  types.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: backend.rs  cli.rs  lib.rs  manager.rs
docs/: architecture.md  overview.md
